Alignment Fixes

--- a/src/components/ImpactCalculator/ImpactCalculator.scss
+++ b/src/components/ImpactCalculator/ImpactCalculator.scss
@@ -90,6 +90,7 @@
     }
   }
   .footer {
+    background-color: $white-color;
     .footer-impact-calc {
       .left-sec {
         .topContainer {
