--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -91,6 +91,9 @@
     pointer-events: none;
   }
 
+  .footer {
+    background-color: $white-color;
+  }
 }
 
 
