--- a/src/components/ProgressBar/progressBar.scss
+++ b/src/components/ProgressBar/progressBar.scss
@@ -16,6 +16,7 @@
   @include breakpoint(landscape-mobileonly) {
     padding-bottom: 5px;
   }
+ 
 }
 
 .saveBtn,
@@ -34,10 +35,14 @@
 
   .progressbar-container {
     .progressbar-innercontainer {
-      justify-content: end;
+      // justify-content: end;
       @include breakpoint(sm-mobileonly) {
         display: block;
+        
       }
+      // @include breakpoint(landscape-smalldevice) {
+      //   width: 735px;
+      // }
     }
 
     .progressbar {
@@ -57,12 +62,16 @@
     width: 36%;
   }
 
+  
+
+
   .button-container {
     justify-content: end;
     -webkit-justify-content:end;
     @include breakpoint(sm-mobileonly) {
       justify-content: right;
     }
+    
 
     .previous-button {
       border: 1px solid $light-blue;
